# zed-ros-wrapper

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  changelog.md  latest_changes.md  package.xml  zed_tf.launch
.github/: stale.yml
.github/ISSUE_TEMPLATE/: 1_feature_request.yml  2_bug_report.yml  bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: stale_issues.yml  submodule_update.yml
cfg/: Zed.cfg
examples/: README.md
examples/zed_ar_track_alvar_example/: CMakeLists.txt  README.md  package.xml
examples/zed_ar_track_alvar_example/launch/: zed_ar_track_alvar.launch
examples/zed_ar_track_alvar_example/rviz/: zed_ar_track_alvar_example.rviz
examples/zed_nodelet_example/: CMakeLists.txt  README.md  package.xml
examples/zed_nodelet_example/launch/: zed_nodelet_laserscan.launch
examples/zed_rtabmap_example/: CMakeLists.txt  README.md  package.xml
examples/zed_rtabmap_example/launch/: zed_rtabmap.launch
launch/: README.md  display.launch  display_zedm.launch  ekf.launch  ukf.launch  zed.launch  zed_camera.launch  zed_camera_nodelet.launch  zed_depth.launch  zed_multi_cam.launch  zed_multi_gpu.launch  zed_nodelet.launch  zed_nodelet.launch.xml  zed_stereo.launch  zed_tf.launch
records/: record_depth.sh
rviz/: zed.rviz  zedm.rviz
src/: point_cloud.cpp  point_cloud.h  zed_wrapper_node.cpp  zed_wrapper_nodelet.cpp
src/nodelet/include/: zed_wrapper_nodelet.h  zed_wrapper_nodelet.hpp
src/nodelet/src/: zed_wrapper_nodelet.cpp
src/tools/include/: sl_tools.h
src/tools/src/: sl_tools.cpp
tutorials/: README.md
tutorials/zed_depth_sub_tutorial/: CMakeLists.txt  README.md  package.xml
tutorials/zed_depth_sub_tutorial/src/: zed_depth_sub_tutorial.cpp
tutorials/zed_tracking_sub_tutorial/: CMakeLists.txt  README.md  package.xml
tutorials/zed_tracking_sub_tutorial/src/: zed_tracking_sub_tutorial.cpp
tutorials/zed_video_sub_tutorial/: CMakeLists.txt  README.md  package.xml
tutorials/zed_video_sub_tutorial/src/: zed_video_sub_tutorial.cpp
urdf/: ZEDM.stl  zed.urdf  zedm.urdf
zed_display_rviz/: CMakeLists.txt  README.md  package.xml
zed_display_rviz/launch/: display.launch  display_zed.launch  display_zed2.launch  display_zedm.launch
zed_display_rviz/rviz/: zed.rviz  zed2.rviz  zedm.rviz
zed_interfaces/: CMakeLists.txt  package.xml
zed_interfaces/msg/: BoundingBox2Df.msg  BoundingBox2Di.msg  BoundingBox3D.msg  Keypoint2Df.msg  Keypoint2Di.msg  Keypoint3D.msg  Object.msg  Objects.msg  ObjectsStamped.msg  RGBDSensors.msg  Skeleton2D.msg  Skeleton3D.msg  object_stamped.msg
zed_interfaces/srv/: reset_odometry.srv  set_led_status.srv  start_3d_mapping.srv  start_object_detection.srv  start_remote_stream.srv  stop_remote_stream.srv  stop_svo_recording.srv
zed_navigation_tutorial/: CMakeLists.txt  README.md  package.xml
zed_navigation_tutorial/launch/: zed_display_navigation.launch  zed_navigation_demo.launch
zed_navigation_tutorial/launch/includes/: move_base.launch.xml  safety_controller.launch.xml  velocity_smoother.launch.xml
zed_navigation_tutorial/param/: dummy.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  trajectory_planner_params.yaml
zed_navigation_tutorial/rviz/: navigation.rviz
zed_nodelet_example/: README.md
zed_nodelet_example/launch/: zed_nodelet_laserscan.launch
zed_nodelets/: CMakeLists.txt  nodelet_plugins.xml  package.xml
zed_nodelets/cfg/: Zed.cfg
zed_nodelets/src/rgbd_sensors_demux_nodelet/include/: rgbd_sensor_demux.hpp
zed_nodelets/src/rgbd_sensors_demux_nodelet/src/: rgbd_sensor_demux.cpp
zed_nodelets/src/rgbd_sensors_sync_nodelet/include/: rgbd_sensor_sync.hpp
zed_nodelets/src/rgbd_sensors_sync_nodelet/src/: rgbd_sensor_sync.cpp
zed_nodelets/src/tools/include/: sl_tools.h
zed_nodelets/src/tools/src/: sl_tools.cpp
zed_nodelets/src/zed_nodelet/include/: zed_wrapper_nodelet.hpp
zed_nodelets/src/zed_nodelet/src/: zed_wrapper_nodelet.cpp
zed_ros/: CMakeLists.txt  package.xml
zed_rtabmap_example/: LICENSE  README.md
zed_rtabmap_example/launch/: zed_rtabmap.launch
zed_video_sub_tutorial/: CMakeLists.txt
zed_video_sub_tutorial/src/: zed_video_sub_tutorial.cpp
zed_wrapper/: .gitignore  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
zed_wrapper/cfg/: TerrainMapping.cfg  Zed.cfg
zed_wrapper/launch/: PCtoLS.launch  README.md  zed.launch  zed2.launch  zed2_robot.launch  zed2i.launch  zed_camera.launch  zed_camera_nodelet.launch  zed_multi_cam.launch  zed_multi_gpu.launch  zed_no_tf.launch  zed_sync_nodelet.launch  zedm.launch  zedx.launch  zedxm.launch
zed_wrapper/launch/include/: zed_camera.launch.xml  zed_camera_nodelet.launch  zed_no_tf.launch.xml
zed_wrapper/msg/: object_stamped.msg  objects.msg
zed_wrapper/param/: common.yaml  zed.yaml  zedm.yaml
zed_wrapper/params/: common.yaml  sync.yaml  zed.yaml  zed2.yaml  zed2i.yaml  zedm.yaml  zedx.yaml  zedxm.yaml
zed_wrapper/records/: record_stereo.sh
zed_wrapper/rviz/: zedm.rviz
zed_wrapper/src/: zed_wrapper_node.cpp
zed_wrapper/src/nodelet/include/: zed_terrain_mapping.hpp  zed_wrapper_nodelet.hpp
zed_wrapper/src/nodelet/src/: zed_terrain_mapping.cpp  zed_wrapper_nodelet.cpp
zed_wrapper/src/tools/include/: csmartmean.hpp  sl_cov_transf.h  sl_tools.h  sl_twist_cov_tools.h
zed_wrapper/src/tools/src/: csmartmean.cpp  sl_cov_transf.cpp  sl_tools.cpp  sl_twist_cov_tools.cpp
zed_wrapper/srv/: start_3d_mapping.srv  start_object_detection.srv  start_remote_stream.srv  start_svo_recording.srv  stop_3d_mapping.srv  stop_object_detection.srv  toggle_led.srv
zed_wrapper/urdf/: zed.urdf  zed.urdf.xacro  zed2.urdf  zed_descr.urdf.xacro  zed_macro.urdf.xacro  zedm.urdf
zed_wrapper/urdf/include/: materials.urdf.xacro
zed_wrapper/urdf/models/: ZEDM.stl  zed2i.stl
