<?xml version="1.0"?>
<package format="2">
  <name>zed_display_rviz</name>
  <version>2.7.0</version>
  <description>
    "zed_display" is a ROS package to visualize in Rviz the information from the "zed_wrapper" node
  </description>
  
  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
  <license>MIT</license>

  <url type="website">http://stereolabs.com/</url>
  <url type="repository">https://github.com/stereolabs/zed-ros-wrapper</url>
  <url type="bugtracker">https://github.com/stereolabs/zed-ros-wrapper/issues</url>

  <buildtool_depend>catkin</buildtool_depend>  

  <exec_depend>rviz</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>
</package>
