<?xml version="1.0"?>
<package format="2">
    <name>zed_nodelets</name>
    <version>3.5.0</version>
    <description>zed_nodelets is package containing all the nodelets provided by the ZED ROS wrapper.</description>

    <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
    <license>MIT</license>

    <url type="website">http://stereolabs.com/</url>
    <url type="repository">https://github.com/stereolabs/zed-ros-wrapper</url>
    <url type="bugtracker">https://github.com/stereolabs/zed-ros-wrapper/issues</url>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>roscpp</depend>
    <depend>rosconsole</depend>
    <depend>sensor_msgs</depend>
    <depend>stereo_msgs</depend>
    <depend>message_filters</depend>
    <depend>image_transport</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>nodelet</depend>
    <depend>diagnostic_updater</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>    

    <build_depend>zed_interfaces</build_depend>

    <exec_depend>zed_interfaces</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>image_transport_plugins</exec_depend>
  
    <export>
         <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
    </export>
</package>

<!--



-->
