<?xml version="1.0"?>
<package format="2">
  <name>zed_wrapper</name>
  <version>2.6.0</version>
  <description>zed_wrapper is a ROS wrapper for the <a href="http://www.stereolabs.com/developers/">ZED library</a>
    for interfacing with the ZED camera.
  </description>

  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
  <license>MIT</license>

  <url type="website">http://stereolabs.com/</url>
  <url type="repository">https://github.com/stereolabs/zed-ros-wrapper</url>
  <url type="bugtracker">https://github.com/stereolabs/zed-ros-wrapper/issues</url>

  <buildtool_depend>catkin</buildtool_depend>  
  
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>sensor_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nodelet</depend>
  <depend>diagnostic_updater</depend>
  
  <build_depend>urdf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
