<?xml version="1.0"?>
<package format="2">
  <name>zed_wrapper</name>
  <version>3.5.0</version>
  <description>
    zed_wrapper is a ROS package containing the ZED wrapper node for the <a href="http://www.stereolabs.com/developers/">ZED library</a> for interfacing with the ZED camera.
    The zed_wrapper_node is a simple loader for the ZEDWrapperNodelet that is the main interface between ROS and the ZED SDK.
  </description>

  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
  <license>MIT</license>

  <url type="website">http://stereolabs.com/</url>
  <url type="repository">https://github.com/stereolabs/zed-ros-wrapper</url>
  <url type="bugtracker">https://github.com/stereolabs/zed-ros-wrapper/issues</url>

  <buildtool_depend>catkin</buildtool_depend>    
 
  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>zed_nodelets</depend>  

  <exec_depend>robot_state_publisher</exec_depend>

</package>
