<?xml version="1.0"?>
<package format="2">
  <name>zed_rtabmap_example</name>
  <version>2.7.0</version>
  <description>
    "zed_rtabmap_example" is a ROS package to show how to use the ROS wrapper with <a href="http://introlab.github.io/rtabmap/">"RTAB-MAP"</a>
  </description>

  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
  <license>MIT</license>

  <url type="website">http://stereolabs.com/</url>
  <url type="repository">https://github.com/stereolabs/zed-ros-wrapper</url>
  <url type="bugtracker">https://github.com/stereolabs/zed-ros-wrapper/issues</url>

  <buildtool_depend>catkin</buildtool_depend>  

  <exec_depend>rtabmap</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>
</package>
