<package format="2">
  <name>zed_depth_sub_tutorial</name>
  <version>1.0.0</version>
  <description>
    This package is a tutorial showing how to subscribe to ZED depth streams
  </description>
  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
